--- a/src/register.html
+++ b/src/register.html
@@ -7,32 +7,63 @@
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"><input class="align-center" type="text" value.bind = "firstName"><h5>First name</h5></input></div>
+      <div class="col s12 m4 l8">
+        <div validation-errors.bind="firstNameErrors">
+          <input id="firstName" class="align-center" type="text" value.bind = "firstName & validateOnChangeOrBlur"/>
+          <h5>First name <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of firstNameErrors">${errorInfo.error.message}</span></h5>
+        </div>
+      </div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"><input class="align-center" type="text" value.bind = "lastName"><h5>Last name</h5></input></div>
+      <div class="col s12 m4 l8">
+        <div validation-errors.bind="lastNameErrors">
+          <input id="lastName" class="align-center" type="text" value.bind = "lastName & validateOnChangeOrBlur"/>
+          <h5>Last name <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of lastNameErrors">${errorInfo.error.message}</span></h5>
+        </div>
+      </div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"><input class="align-center" type="text" value.bind = "userName"><h5>Username</h5></input></div>
+      <div class="col s12 m4 l8">
+        <div validation-errors.bind="userNameErrors">
+          <input id="userName" class="align-center" type="text" value.bind = "userName & validateOnChangeOrBlur"/>
+          <h5>Username <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of userNameErrors">${errorInfo.error.message}</span></h5>
+        </div>
+      </div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"><input class="align-center" type="text" value.bind = "email"><h5>Email</h5></input></div>
+      <div class="col s12 m4 l8">
+        <div validation-errors.bind="emailErrors">
+          <input id="email" class="align-center" type="text" value.bind = "email & validateOnChangeOrBlur"/>
+          <h5>Email <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of emailErrors">${errorInfo.error.message}</span></h5>
+        </div>
+      </div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"><input class="align-center" type="text" value.bind = "password"><h5>Password</h5></input></div>
+      <div class="col s12 m4 l8">
+          <div validation-errors.bind="passwordErrors">
+            <input id="password" class="align-center"type.bind="passwordType" value.bind = "password & validateOnChangeOrBlur"/>
+            <h5>Password <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors">${errorInfo.error.message}</span></h5>
+          </div>
+      </div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"><input class="align-center" type="text" value.bind = "confirmPassword"><h5>Confirm password</h5></input></div>
+      <div class="col s12 m4 l8">
+        <div validation-errors.bind="confirmPasswordErrors">
+          <input id="confirmPassword" class="align-center" type.bind="passwordType" value.bind = "confirmPassword & validateOnChangeOrBlur"/>
+          <h5>Confirm password<span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of confirmPasswordErrors">${errorInfo.error.message}</span></h5>
+        </div>
+      </div>
+      <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
