Changed authConfig to reflect torrect urls and some minor beauty edtts to some other files.

--- a/src/login.html
+++ b/src/login.html
@@ -26,6 +26,9 @@
       <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>    
       <div class="col s12 m4 l2"><p></p></div>
     </div>
+    <!-- NOTIFICATION -->
+    <require from='./notification/notification'></require>
+    <notification></notification>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
       <div class="col s12 m4 l8"> <button class="grow btn teal darken-4 waves-effect waves-light transparent-title" type="submit" name="login">Submit</button></div>
