--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,40 @@
 <template>
   <require from="materialize-css/dist/css/materialize.css"></require>
   <require from="./styles.css"></require>
-  <div class="row row-top">
-    <div class="col l12 teal darken-4 transparent-title valign-wrapper">
+  <nav>
+      <div class="nav-wrapper teal darken-4">
+        <a href="#" class="brand-logo">WebMap Project</a>
+        <ul class="right">
+          <li><a md-sidenav-collapse="ref.bind: sideNavRight;" if.bind="authenticated">Tools</a></li>
+          <li><a md-sidenav-collapse="ref.bind: sideNavRight;" if.bind="authenticated">Layers</a></li>
+          <li><a md-sidenav-collapse="ref.bind: sideNavRight;" if.bind="authenticated">${userNameDisplay}</a></li>
+        </ul>
+      </div>
+    </nav>
+<!--   <div class="row row-top">
+     <div class="col l12 teal darken-4 transparent-title valign-wrapper">
       <h1 style.bind="topRowStyle">WebMap Project</h1>
-      <img class="col l1 m1 s1 grow" src="./resources/icons/icon.svg" show.bind="userImage">
+      <div class="col l1 m1 s1 grow" if.bind="authenticated">
+        <a md-sidenav-collapse="ref.bind: sideNavRight;">
+          <div class="card teal darken-4">
+            <div class="card-image">
+              <img src="./resources/icons/icon.svg">
+              <span class="card-title pointer">${userNameDisplay}</span>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
-  </div>
+  </div> -->
+  <md-sidenav view-model.ref="sideNavRight" edge="right">
+      <ul>
+        <li md-waves click.trigger="logout()">Logout</li>
+        <li md-waves>My profile</li>
+        <li md-waves>My Settings</li>
+        <li md-waves>Help</li>
+      </ul>
+    </md-sidenav>
+<!--   <require from="./sideNav/sideNav.html"></require>
+  <sideNav></sideNav> -->
   <router-view></router-view>
 </template>
