--- a/src/login.html
+++ b/src/login.html
@@ -37,7 +37,7 @@
   </form>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="register" route-href="route: register;">I don't have an account!</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="registration" route-href="route: registration;">I don't have an account!</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
   <div class="row align-center">
@@ -47,7 +47,7 @@
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="facebook" click.delegate="authenticate('facebook')">Use Facebook</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="facebook" route-href="route: confirmemail;">Use Facebook</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
 </template>
