Added reset password buttion and login error reporting.

--- a/src/login.html
+++ b/src/login.html
@@ -26,6 +26,13 @@
       <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>    
       <div class="col s12 m4 l2"><p></p></div>
     </div>
+    <!-- reCaptcha -->
+<!--     <require from="./recaptcha/recaptcha"></require>
+    <div class="row align-center">
+      <div class="col s12 m4 l2 align-center"><p></p></div>
+      <recaptcha class="col s12 m4 l8"></recaptcha>
+      <div class="col s12 m4 l2"><p></p></div>
+    </div> -->
     <!-- NOTIFICATION -->
     <require from='./notification/notification'></require>
     <notification></notification>
@@ -42,7 +49,7 @@
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="continue" route-href="route: basemap;">Continue unregistered</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="passreset" route-href="route: basemap;">I forgot my password</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
   <div class="row align-center">
