--- a/src/login.html
+++ b/src/login.html
@@ -54,7 +54,7 @@
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="facebook" route-href="route: resetpasswordnotification">Use Facebook</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="facebook">Use Facebook</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
 </template>
