--- a/src/usermamagementredirect/confirmemailnotification.html
+++ b/src/usermamagementredirect/confirmemailnotification.html
@@ -1,6 +1,6 @@
 <template>
   <div class="row confirm-email-text col l12 m12 s12 yellow darken-2 transparent-title valign-wrapper">
-    ${message}
+    <h5>${message}</h5>
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
