--- a/src/login.html
+++ b/src/login.html
@@ -49,7 +49,7 @@
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="passreset" click.trigger="requestResetPassword()">I forgot my password</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="passreset" route-href="route: requestresetpassword;">I forgot my password</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
   <div class="row align-center">
