--- a/src/resetpassword/resetpassword.html
+++ b/src/resetpassword/resetpassword.html
@@ -4,11 +4,21 @@
     <div class="col s12 m4 l2"><p></p></div>
     <div class="col s12 m4 l8">
       <div validation-errors.bind="passwordErrors">
-        <input id="password" class="align-center"type.bind="passwordType" value.bind = "newPassword & validateOnChangeOrBlur"/>
+        <input id="newPassword" class="align-center"type.bind="passwordType" value.bind = "newPassword & validateOnChangeOrBlur"/>
         <h5>New password <span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of passwordErrors">${errorInfo.error.message}</span></h5>
       </div>
     </div>
-      <span><i class="grow material-icons icon-black" click.trigger="revealPassword()">remove_red_eye</i></span>    
+      <div class="col s12 m4 l2"><p></p></div>
+    </div>
+    <div class="row align-center">
+      <div class="col s12 m4 l2"><p></p></div>
+      <div class="col s12 m4 l8">
+        <div validation-errors.bind="confirmPasswordErrors">
+          <input id="confirmPassword" class="align-center" type.bind="passwordType" value.bind = "confirmPassword & validateOnChangeOrBlur"/>
+          <h5>Confirm password<span class="orange-text text-darken-2" if.bind="controller.errors" repeat.for="errorInfo of confirmPasswordErrors">${errorInfo.error.message}</span></h5>
+        </div>
+      </div>
+      <span><i class="grow material-icons" click.trigger="revealPassword()">remove_red_eye</i></span>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <require from='../notification/notification'></require>
