--- a/src/usermamagementredirect/emailConfirmed.html
+++ b/src/usermamagementredirect/emailConfirmed.html
@@ -1,6 +1,6 @@
 <template>
   <div class="row confirm-email-text col l12 m12 s12 yellow darken-2 transparent-title valign-wrapper">
-    <h5>${message}</h5>
+    <h5>Email already confirmed. You can login to our website.</h5>
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
