--- a/src/usermamagementredirect/emailOk.html
+++ b/src/usermamagementredirect/emailOk.html
@@ -1,11 +1,10 @@
 <template>
   <div class="row confirm-email-text col l12 m12 s12 yellow darken-2 transparent-title valign-wrapper">
-    <h5>${userManagementNotification}</h5>
+    <h5>Email successfully comfirmed. You can now logn to our website</h5>
   </div>
-  <notification></notification>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="OK" route-href="route.bind: okButton">I see</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="login" route-href="route: login;">Login</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
 </template>
