--- a/src/basemap.html
+++ b/src/basemap.html
@@ -3,47 +3,26 @@
   <div class="row">
     <ul class="collection with-header col l3 m3 s3 layer-list">
       <li class="collection-header teal darken-3"><h4>Layers</h4></li>
-<!--       <li class="collection-item teal darken-4" repeat.for="layer of layers | objectKeys" click.trigger="ch"> -->
-<!--         <div id="collapsible-header${layer.id}" class="collapsible-accordion">
-          <ul md-collapsible="accordion: false;">
-            <li >
-              <div class="collapsible-header teal darken-4" click.delegate="changDisplayedDate($event, layer.id, layers[layer.id].selectedDateIndex)">
-                <p>
-                  <label>
-                    <input id=${layer.id} type="checkbox" checked.bind="layers[layer.id].active"/>
-                    <span class="white-text">${layer.name}</span>
-                  </label>
-                </p>
-              </div>
-              <div id="collapsible-body${layer.id}" class="collapsible-body">
-                <p id="opacityValue${layer.id}"></p>Slide to change opacity ${layer.opacity} ${layer.id}
-                <div id="opacity-slider${layer.id}"></div>
-                <p>Displaying data for ${layer.displayedDate}</p>
-                <div id="date-slider${layer.id}"></div>
-                <p>Current min/max values are set to ${layer.displaySettings.min}/${layer.displaySettings.max}</p>
-                <div id="min-max-slider${layer.id}"></div>
-              </div>
-            </li>
-          </ul>
-        </div> -->
-        <div class="collapsible-basic-use">
-          <ul md-collapsible md-collapsible.ref="collapsible">
+        <div class="collapsible-open-close-events">
+          <ul md-collapsible md-on-open-start.delegate="collapsibleOpen($event.detail.el.childNodes[1].id)" md-on-close-start.delegate="collapsibleClose($event.detail.el.childNodes[1].id)">
             <li repeat.for="layer of layers | objectKeys">
-              <div class="collapsible-header teal darken-${layer.id+2}" click.delegate="changDisplayedDate(layer.id, layers[layer.id].selectedDateIndex)">
-                <p>
-                  <label>
-                    <input id=${layer.id} type="checkbox" checked.bind="layers[layer.id].active"/>
-                    <span class="white-text">${layer.name}</span>
-                  </label>
-                </p>
+              <div class="collapsible-header teal darken-${layer.id+2}" id=${layer.id}>
+                <h5 class="white-text">${layer.name}</h5>
               </div>
               <div id="collapsible-body${layer.id}" class="collapsible-body">
-                <p id="opacityValue${layer.id}"></p>Slide to change opacity
-                <div id="opacity-slider${layer.id}"></div>
-                <p>Displaying data for ${layer.displayedDate}</p>
-                <div id="date-slider${layer.id}"></div>
-                <p>Current min/max values are set to ${layer.displaySettings.min} ${layer.displaySettings.max}</p>
-                <div id="min-max-slider${layer.id}"></div>
+                <div class="row">Slide to change opacity
+                  <div class="col s12 opacity-slider" id="opacity-slider${layer.id}"></div>
+                </div>
+                <div class="row">Slide to display different dates <br>${layer.displayedDate}
+                  <div class="col s12 date-slider" id="date-slider${layer.id}"></div>
+                </div>
+                <div class="row">Slide to adjust min (${layer.displaySettings.min}) and max (${layer.displaySettings.max}) values
+                  <div class="col s12 min-max-slider" id="min-max-slider${layer.id}"></div>
+                </div>
+                <div id="legend-holder${layer.id}"></div>
+                <div>
+                  <a md-button="floating: true;" md-tooltip="position: bottom; text: Reset range settings;" md-waves="color: light;" class="red" click.trigger="resetRangeSettings(layer.id)"><i class="material-icons">cached</i></a>
+                </div>
               </div>
             </li>
           </ul>
