--- a/src/changeemail/changeemail.html
+++ b/src/changeemail/changeemail.html
@@ -12,13 +12,13 @@
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <button class="grow btn teal darken-4 waves-effect waves-light transparent-title" type="submit" name="new-email-submit">Submit</button></div>
+      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="new-email-submit">Submit</button></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
   </form>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="email-update-cancel" route-href="route: basemap;">Cancel</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="email-update-cancel" route-href="route: basemap;">Cancel</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
 </template>
