--- a/src/login.html
+++ b/src/login.html
@@ -38,23 +38,23 @@
     <notification></notification>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <button class="grow btn teal darken-4 waves-effect waves-light transparent-title" type="submit" name="login">Submit</button></div>
+      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="login">Submit</button></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
   </form>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="registration" route-href="route: registration;">I don't have an account!</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="registration" route-href="route: registration;">I don't have an account!</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="passreset" route-href="route: requestresetpassword;">I forgot my password</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="passreset" route-href="route: requestresetpassword;">I forgot my password</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="facebook">Follow us on Facebook</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="facebook">Follow us on Facebook</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
 </template>
