--- a/src/resetpassword/resetpassword.html
+++ b/src/resetpassword/resetpassword.html
@@ -25,12 +25,12 @@
     <notification></notification>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <button class="grow btn teal darken-4 waves-effect waves-light transparent-title" type="submit" name="reset-password">Submit</button></div>
+      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="reset-password">Submit</button></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="password-reset-cancel" route-href="route: login;">Cancel</a></div>
+      <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="password-reset-cancel" route-href="route: login;">Cancel</a></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
   </form>
