--- a/src/registration.html
+++ b/src/registration.html
@@ -71,13 +71,13 @@
     <notification></notification>
     <div class="row align-center">
       <div class="col s12 m4 l2"><p></p></div>
-      <div class="col s12 m4 l8"> <button class="grow btn teal darken-4 waves-effect waves-light transparent-title" type="submit" name="register-submit">Submit</button></div>
+      <div class="col s12 m4 l8"> <button class="grow btn light-green darken-4 waves-effect waves-light transparent-title" type="submit" name="register-submit">Submit</button></div>
       <div class="col s12 m4 l2"><p></p></div>
     </div>
   </form>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="register-cancel" route-href="route: login;">Cancel</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="register-cancel" route-href="route: login;">Cancel</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
 </template>
