--- a/src/usermamagementredirect/emailNotOk.html
+++ b/src/usermamagementredirect/emailNotOk.html
@@ -4,7 +4,7 @@
   </div>
   <div class="row align-center">
     <div class="col s12 m4 l2"><p></p></div>
-    <div class="col s12 m4 l8"> <a class="grow btn teal darken-4 waves-effect waves-light transparent-title" name="login" route-href="route: login;">Login</a></div>
+    <div class="col s12 m4 l8"> <a class="grow btn light-green darken-4 waves-effect waves-light transparent-title" name="login" route-href="route: login;">Login</a></div>
     <div class="col s12 m4 l2"><p></p></div>
   </div>
 </template>
